Day9/easy_fanout/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo-service
spec:
  type: NodePort
  selector:
    type: foo-demo
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bar-service
spec:
  type: NodePort
  selector:
    type: bar-demo
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8080
